# nicocorn

./: LICENSE  pyproject.toml  setup.cfg  setup.py
src/nicocorn/: __init__.py
