[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[tool.mypy]
show_error_context = true
show_column_numbers = true
ignore_missing_imports = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 79
exclude = [".venv", ".git", "__pycache__",]
max-complexity = 16
unused-arguments-ignore-abstract-functions = true
