[metadata]
name = nicocorn
version = 0.0.1a1
description = Nicocorn social network service
license = MIT
author = MH35
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11

[options]
package_dir=
    =src
packages=find:

install_requires =
    Flask >= 2.2.3

[options.extras_require]
dev =
    pylint >= 2.16.1
    pycodestyle >= 2.10.0
    mypy >= 1.0.0
    flake8 >= 6.0.0
    flake8-isort >= 6.0.0
    flake8-bugbear >= 23.1.20
    flake8-builtins >= 2.1.0
    flake8-unused-arguments >= 0.0.13
    flake8-pytest-style >= 1.7.0
    pep8-naming >= 0.13.3
    black >= 23.1.0
    isort >= 5.12.0
test =
    pytest >= 7.2.1
    pytest-cov >= 4.0.0
doc =
    Sphinx >= 6.1.3
